<?xml version="1.0" encoding="utf-8"?>
<!--
    Navigation Graph for EchoCare

    4 top-level destinations matching BottomNavigationView:
    1. Dashboard (start destination)
    2. Charts
    3. Science
    4. Environment Info
-->
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.echocare.app.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard" />

    <fragment
        android:id="@+id/chartsFragment"
        android:name="com.echocare.app.ui.charts.ChartsFragment"
        android:label="Charts"
        tools:layout="@layout/fragment_charts" />

    <fragment
        android:id="@+id/scienceFragment"
        android:name="com.echocare.app.ui.science.ScienceFragment"
        android:label="@string/nav_science" />

    <fragment
        android:id="@+id/environmentInfoFragment"
        android:name="com.echocare.app.ui.environment.EnvironmentInfoFragment"
        android:label="@string/nav_environment"
        tools:layout="@layout/fragment_environment" />

    <fragment
        android:id="@+id/soundsFragment"
        android:name="com.echocare.app.ui.sounds.SoundsFragment"
        android:label="Sounds"
        tools:layout="@layout/fragment_sounds" />
</navigation>